Added jenkins pipeline file